# NetherBox

./: .dockerignore  .gitignore  Dockerfile  README.md  about.html  app.html  app.py  demo.py  index.html  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: ci_cd.yml
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
